--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="wrapper">
          <div class="sidebar-wrapper">
             <div class="profile-container">
-               <img class="profile" style="border-radius: 50%;" src="assets/images/profile_photo.png" alt="Profile Picture" height="150" width="150" />
+               <img class="profile" style="border-radius: 50%;" src="assets/images/profile_photo.jpg" alt="Profile Picture" height="150" width="150" />
                <h1 class="name">Peter Zajac</h1>
                <h3 class="tagline">Developer</h3>
             </div>
