--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="contact-container container-block">
                <ul class="list-unstyled contact-list">
                   <li class="email"><i class="fas fa-envelope"></i><a href="mailto: peterzajac39@gmail.com">peterzajac39@gmail.com</a></li>
-                  <li class="website"><i class="fas fa-globe"></i><a href="https://themes.3rdwavemedia.com/bootstrap-templates/resume/orbit-free-resume-cv-bootstrap-theme-for-developers/" target="_blank">portfoliosite.com</a></li>
+                  <li class="website"><i class="fas fa-globe"></i><a href="#" target="_blank">portfoliosite.com</a></li>
                   <li class="github"><i class="fab fa-github"></i><a href="https://github.com/peterzajac39" target="_blank">Github repo</a></li>
                </ul>
             </div>
