--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="contact-container container-block">
                <ul class="list-unstyled contact-list">
                   <li class="email"><i class="fas fa-envelope"></i><a href="mailto: peterzajac39@gmail.com">peterzajac39@gmail.com</a></li>
-                  <li class="website"><i class="fas fa-globe"></i><a href="#" target="_blank">portfoliosite.com</a></li>
+                  <li class="website"><i class="fas fa-globe"></i><a href="#">Portfolio Website</a></li>
                   <li class="github"><i class="fab fa-github"></i><a href="https://github.com/peterzajac39" target="_blank">Github repo</a></li>
                </ul>
             </div>
@@ -129,7 +129,7 @@
                </div>
                <!--//item-->
                <div class="item">
-                  <span class="project-title"><a href="#" target="_blank">Central automation tracker CAT</a></span>
+                  <span class="project-title"><a href="#">Central automation tracker CAT</a></span>
                   <p class="project-tagline">A web application for IBM, web application for automation tracking and visualization of automation usage developed by our team.</p>
                </div>
             </section>
