--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
             <section class="section summary-section">
                <h2 class="section-title"><span class="icon-holder"><i class="fas fa-user"></i></span>Career Profile</h2>
                <div class="summary">
-                  <p>I am 23 year old student currently in final year of Faculty of IT in Technical University Bratislava (FIIT STU).</p>
-                  <p>I have 2.5 years experience of working in IBM Slovakia as Junior Developer for Java automations
+                  <p>I am 23 year old developer, recently graduated from Faculty of IT in Technical University Bratislava (FIIT STU).</p>
+                  <p>I have 3 years experience of working in IBM ISC as Junior Developer for Java automations
                   and web development in Javascript (Angular framework) and NodeJS backend.</p>
                   <p>I am willing to learn and progress especially in area of Web development.</p>
                </div>
@@ -174,6 +174,13 @@
                      <h3 class="level-title">Angular</h3>
                      <div class="progress level-bar">
                         <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                     </div>
+                  </div>
+                  <!--//item-->
+                  <div class="item">
+                     <h3 class="level-title">Python</h3>
+                     <div class="progress level-bar">
+                        <div class="progress-bar theme-progress-bar" role="progressbar" style="width: 60%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                      </div>
                   </div>
                   <!--//item-->
