Updated profile info

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
                   <li class="email"><i class="fas fa-envelope"></i><a href="mailto: peterzajac39@gmail.com">peterzajac39@gmail.com</a></li>
                   <li class="website"><i class="fas fa-globe"></i><a href="#">Portfolio Website</a></li>
                   <li class="github"><i class="fab fa-github"></i><a href="https://github.com/peterzajac39" target="_blank">Github repo</a></li>
+                  <li class="github"><i class="fab fa-linkedin"></i><a href="https://www.linkedin.com/in/peter-zajac-683522234/" target="_blank">Linkedin profile</a></li>
+                  
                </ul>
             </div>
             <!--//contact-container-->
@@ -66,9 +68,9 @@
             <section class="section summary-section">
                <h2 class="section-title"><span class="icon-holder"><i class="fas fa-user"></i></span>Career Profile</h2>
                <div class="summary">
-                  <p>I am 23 year old developer, recently graduated from Faculty of IT in Technical University Bratislava (FIIT STU).</p>
+                  <p>I am 27 year old developer, recently graduated from Faculty of IT in Technical University Bratislava (FIIT STU).</p>
                   <p>I have 3 years experience of working in IBM ISC as Junior Developer for Java automations
-                  and web development in Javascript (Angular framework) and NodeJS backend.</p>
+                  and web development in Javascript (Angular framework) and NodeJS backend and another 3 years of similar technologies, as medior developer.</p>
                   <p>I am willing to learn and progress especially in area of Web development.</p>
                </div>
                <!--//summary-->
@@ -79,7 +81,7 @@
                <div class="item">
                   <div class="meta">
                      <div class="upper-row">
-                        <h3 class="job-title">Junior Web Developer</h3>
+                        <h3 class="job-title">Software Developer</h3>
                         <div class="time">2017 - Present</div>
                      </div>
                      <!--//upper-row-->
@@ -87,7 +89,7 @@
                   </div>
                   <!--//meta-->
                   <div class="details">
-                     <p>Currently I am working as junior full-stack web developer in IBM, Bratislava. We make automations for internal puposes in IBM cloud - Bluemix.</p>
+                     <p>Currently I am working as full-stack web developer in IBM, Bratislava. We make automations for internal puposes in IBM cloud - Bluemix.</p>
                      <p>For frontend we used used <b>Angular</b> framweork and also some <b>JQuery</b> framework with Javascript. </p>
                      <p>For backend we used <b>NodeJS</b> with <b>Express</b> framework and for database storage <b>Cloudant</b> (CouchDB version for IBM).</p>
                   </div>
